[gd_scene load_steps=6 format=3 uid="uid://b6bw3t1lwesde"]

[ext_resource type="Script" path="res://scripts/interface_scripts/emerald_counter.gd" id="1_8mtqp"]
[ext_resource type="Texture2D" uid="uid://6026nucwd0i0" path="res://interface/emerald.png" id="1_26r8l"]
[ext_resource type="Theme" uid="uid://ciap8f0msyji" path="res://scenes/interface_scenes/emerald_theme.tres" id="2_gl0tc"]

[sub_resource type="Gradient" id="Gradient_30t20"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_smlqd"]
gradient = SubResource("Gradient_30t20")
fill_from = Vector2(1, 0)

[node name="emeraldCounter" type="NinePatchRect"]
offset_right = 119.0
offset_bottom = 148.0
texture = SubResource("GradientTexture2D_smlqd")
script = ExtResource("1_8mtqp")

[node name="emeraldTextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 119.0
offset_bottom = 103.0
texture = ExtResource("1_26r8l")
expand_mode = 1

[node name="emeraldLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 103.0
offset_right = 119.0
offset_bottom = 148.0
theme = ExtResource("2_gl0tc")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="notEnoughEmeralds" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.26891
anchor_right = 6.68067
anchor_bottom = 0.614865
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="passiveEmerald"]
